--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <section class="home" id="home">
       <div class="content">
-        <h3>fresh coffee in the morning</h3>
+        <h3>Get Start Learning</h3>
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat
           labore, sint cupiditate distinctio tempora reiciendis.
@@ -105,7 +105,7 @@
 
       <div class="row">
         <div class="image">
-          <img src="images/about-img.jpeg" alt="" />
+          <img src="images/about.png" alt="" />
         </div>
 
         <div class="content">
@@ -131,28 +131,25 @@
     <!-- menu section starts  -->
 
     <section class="menu" id="menu">
-      <h1 class="heading">our <span>menu</span></h1>
+      <h1 class="heading">OUR FEATURED COURSES<span> FOR B.TECH</span></h1>
 
       <div class="box-container">
         <div class="box">
-          <img src="images/menu-1.png" alt="" />
-          <h3>tasty and healty</h3>
-          <div class="price">Rs15.99 <span>20.99</span></div>
-          <a href="#" class="btn">add to cart</a>
+          <h3>CODING</h3>
+          <div class="price"><span></span></div>
+          <a href="coding.html" target="_blank"><img src="images/CC.jpg" alt="" /></a>
         </div>
 
         <div class="box">
-          <img src="images/menu-2.png" alt="" />
-          <h3>tasty and healty</h3>
-          <div class="price">Rs15.99 <span>20.99</span></div>
-          <a href="#" class="btn">add to cart</a>
+          <h3>SUBJECT</h3>
+          <a href="subject.html" target="_blank"><img src="images/SS.png" alt="" /></a>
         </div>
 
         <div class="box">
           <img src="images/menu-3.png" alt="" />
           <h3>tasty and healty</h3>
           <div class="price">Rs15.99 <span>20.99</span></div>
-          <a href="#" class="btn">add to cart</a>
+          <a href="coding.html"></a>
         </div>
 
         <div class="box">
